--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -14,12 +14,14 @@ jobs:
       contents: read
       security-events: write
 
-    container:
-      image: semgrep/semgrep
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Install Semgrep
+        run: |
+          python -m pip install --upgrade pip
+          pip install semgrep
 
       - name: Run Semgrep - Security Audit
         run: semgrep scan --config=p/security-audit --sarif --output=security-audit.sarif
