jwt authentication with challenge-response mechanism

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 MINIO_BUCKET=tenebra-files
 MINIO_USE_SSL=false
+
+# JWT Configuration
+JWT_SECRET=change-this-to-a-secure-random-string
+JWT_EXPIRES_IN=7d
