--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.3",
     "knex": "^3.1.0",
     "minio": "^7.1.3",
+    "node-cron": "^4.2.1",
     "objection": "^3.1.5",
     "pg": "^8.11.3",
     "socket.io": "^4.8.3",
@@ -41,6 +42,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.0",
+    "@types/node-cron": "^3.0.11",
     "@types/uuid": "^9.0.7",
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
