--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,6 @@ MINIO_USE_SSL=false
 # JWT Configuration
 JWT_SECRET=change-this-to-a-secure-random-string
 JWT_EXPIRES_IN=7d
+# Key Management Configuration
+# Threshold below which clients are notified to upload more one-time pre-keys
+LOW_KEY_THRESHOLD=20
